--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ management.address: 127.0.0.1
 
 spring.datasource.url=jdbc:mysql://localhost:3306/creativeirestaurant
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root1234
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
